<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:hint="@string/hint_name"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:focusable="false"
                android:hint="@string/hint_date"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spPeriodicity"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_periodicity" />

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spImportance"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_importance" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/btn_save"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
