<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:title="@string/app_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:padding="16dp" android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/empty_services"
            android:gravity="center" android:paddingTop="24dp" android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServices"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:contentDescription="@string/add_service"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
